added initial set for js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<link href="./app.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
-		<canvas id="canvas" width="700" height="700">
+		<canvas id="canvas">
+		<div class="settings"></div>
 	</body>
 	<script type="text/javascript" src="./default.js"></script>
 </html>
