adjusted canvas draw to fill window without pie going over; wip on draw being limited to circle

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link href="./app.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
-		<canvas id="canvas">
+		<canvas id="canvas" ></canvas>
 		<div class="settings"></div>
 	</body>
 	<script type="text/javascript" src="./default.js"></script>
